...
    onLoginWallet();
  }, [onLoginWallet]);
  return (
    <SafeAreaView
      edges={['right', 'top', 'left']}
      style={[styles.container, { backgroundColor: white_snow }]}
      testID='user-selector-screen'
    >
      <ScrollView
        contentContainerStyle={styles.contentContainer}
        style={styles.scrollContainer}
        testID='users-list'
      >
        <View style={styles.titleContainer}>
          <ErmisLogo />
          <Text style={[styles.title, { color: black }]}>Welcome to Ermis Chat</Text>
        </View>
        <View style={styles.walletView}>
...
